# rm_manual

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.github/workflows/: deb_package.yml  format.yml  industrial_ci.yml
config/: engineer.yaml  hero.yaml  sentry.yaml  standard.yaml  standard3.yaml  standard4.yaml  standard5.yaml  swerve.yaml
include/rm_manual/: CatapultDart_manual.h  balance_manual.h  chassis_gimbal_manual.h  chassis_gimbal_shooter_cover_manual.h  chassis_gimbal_shooter_manual.h  controller_manager.h  dart_manual.h  data.h  engineer2_manual.h  engineer_manual.h  fsm_data.h  input_event.h  legged_wheel_balance_manual.h  manual_base.h  manual_common.h  protocol.h  referee.h  scara_manual.h  shooter_heat_limit.h  target_cost_function.h  wheeled_balance_manual.h
launch/: load.launch
src/: CatapultDart_manual.cpp  balance_manual.cpp  chassis_gimbal_manual.cpp  chassis_gimbal_shooter_cover_manual.cpp  chassis_gimbal_shooter_manual.cpp  controller_manager.cpp  dart_manual.cpp  engineer2_manual.cpp  engineer_manual.cpp  legged_wheel_balance_manual.cpp  main.cpp  manual_base.cpp  manual_common.cpp  referee.cpp  scara_manual.cpp  shooter_heat_limit.cpp  target_cost_function.cpp  wheeled_balance_manual.cpp
src/common/: controller_manager.cpp  manual_base.cpp  manual_common.cpp  shooter_heat_limit.cpp  target_cost_function.cpp
src/referee/: graph.cpp  referee.cpp  referee_ui.cpp  ui.cpp
test/config/: sentry_power_limit.yaml  standard_power_limit.yaml
test/launch/: test_power_limit.launch
(+17 files in other folders)
